# block_allocator

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  run_tests.sh
include/: block_allocator.h
src/: block_allocator.c
tests/: CMakeLists.txt  test_balloc.cpp  test_balloc_critical.cpp
